# labplot

./: .arcconfig  .clang-format  .craft.ini  .directory  .editorconfig  .edtorconfig  .flatpak-manifest.json  .gitattributes  .gitignore  .gitlab-ci.yml  .kde-ci.yml  2.0.kdev4  AUTHORS  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakePresets.json  ChangeLog  INSTALL  Messages.sh  README  README.md  TODO  TODO-dirfile  WISHLIST  backup  build  cl-fmt.sh  clean  compile  compile-clang  compile-clang-tidy  compile-clang_debug  compile-clazy  compile-debug  compile-devel  compile-icc  compile-intel  compile-macos  compile-pgi  compile-profile  (+26 more)
lib/: CMakeLists.txt  labplot.h  labplot.h.in
lib/cmake/: labplot-config-version.cmake.in  labplot-config.cmake.in  labplot.h.in
lib/demo/: main.cpp
lib/example/: CMakeLists.txt  main.cpp
lib/examples/: CMakeLists.txt
lib/python/: CMakeLists.txt  bindings.h  bindings.xml  bindings_script.h  bindings_script.xml
liborigin/: CMakeLists.txt  FORMAT  OriginAnyParser.cpp  OriginAnyParser.h  OriginFile.cpp  OriginFile.h  OriginObj.h  OriginParser.cpp  OriginParser.h  README  config.h.in  endianfstream.hh  opj2dat.cpp  tree.hh
liborigin-20080225/: CMakeLists.txt  FORMAT  Makefile  Makefile.DARWIN  Makefile.LINUX  Makefile.SOLARIS  OPJFile.cpp  OPJFile.h  README  build-liborigin.sh  cmake_install.cmake  lib-arch.sh  liborigin.spec  opj2dat.cpp  tree.hh  ws4.opj
liborigin/doc/: Doxyfile.in  liborigin.dox
pylabplot/: CMakeLists.txt  bindings.h  bindings.xml
pylabplot/examples/: example.py
pylabplot/utils/: KDFixupShiboken2.py
src/: .directory  .kdev_include_paths  AxesDialog.cc  AxesDialog.h  Axis.cc  Axis.h  CMakeLists.txt  ColumnDialog.cc  ColumnDialog.h  Dialog.cc  Dialog.h  Doxyfile  Errorbar.cc  Errorbar.h  FileInfoDialog.cc  FileInfoDialog.h  FilterCDF.cc  FilterCDF.h  FilterHDF5.cc  FilterHDF5.h  FilterNETCDF.cc  FilterNETCDF.h  FilterOPJ.cc  FilterOPJ.h  FunctionDialog.cc  FunctionDialog.h  ImportDialog.cc  ImportDialog.h  Info.plist  LRange.cc  LRange.h  LabPlot.cc  LabPlot.desktop  LabPlot2.desktop  LabPlotui.rc  Label.cc  Label.h  LegendDialog.cc  LegendDialog.h  MainWin.cc  (+69 more)
src/Plugins/: Readme.md
src/backend/: .directory  backend.dox
src/cantor/: assistant.h  cantor_assistant.desktop  cantor_backend.desktop  cantor_export.h  cantor_panelplugin.desktop  cantor_part.cpp  cantor_part.h  panelplugin.cpp  panelplugin.h  panelpluginhandler.cpp  panelpluginhandler.h
src/commonfrontend/: ProjectExplorer.cpp  ProjectExplorer.h
src/doc/: api_design.dox  aspect-framework.dox  aspect_styles.dox  coding.dox  coding_style.dox  data_set.dox  future.dox  plotting_framework.dox  plugins.dox
src/elements/: Axis.cc  Axis.h  CMakeLists.txt  Function.cc  Function.h  Label.cc  Label.h  Legend.cc  Legend.h  Point.cc  Point.h  Point3D.cc  Point3D.h  Range.cc  Range.h  Set.cc  Set.h  Style.cc  Style.h  Symbol.cc  Symbol.h
src/filter/: FilterCDF.cc  FilterCDF.h  FilterHDF5.cc  FilterHDF5.h  FilterNETCDF.cc  FilterNETCDF.cpp  FilterNETCDF.h  FilterOPJ.cc  FilterOPJ.cpp  FilterOPJ.h
src/frontend/: AboutDialog.cpp  AboutDialog.h  ActionsManager.cpp  ActionsManager.h  DatasetModel.cpp  DatasetModel.h  GuiObserver.cpp  GuiObserver.h  GuiTools.cpp  GuiTools.h  HistoryDialog.cpp  HistoryDialog.h  LabPlot.cpp  MainWin.cpp  MainWin.h  PlotTemplateDialog.cpp  PlotTemplateDialog.h  ProjectExplorer.cpp  ProjectExplorer.h  SettingsDatasetsPage.cpp  SettingsDatasetsPage.h  SettingsDialog.cpp  SettingsDialog.h  SettingsEditorPage.cpp  SettingsEditorPage.h  SettingsGeneralPage.cpp  SettingsGeneralPage.h  SettingsNotebookPage.cpp  SettingsNotebookPage.h  SettingsPage.h  SettingsScriptingPage.cpp  SettingsScriptingPage.h  SettingsSpreadsheetPage.cpp  SettingsSpreadsheetPage.h  SettingsWelcomePage.cpp  SettingsWelcomePage.h  SettingsWorksheetPage.cpp  SettingsWorksheetPage.h  TemplateHandler.cpp  ThemeHandler.cpp  (+6 more)
src/gui/: AxesDialog.cc  AxesDialog.h  AxesWidget.cc  AxesWidget.h  ColorMapPreview.cc  ColorMapPreview.h  ColumnDialog.cc  ColumnDialog.h  ExportDialog.cc  ExportDialog.h  ExportWidget.cc  ExportWidget.h  FunctionDialog.cc  FunctionDialog.h  FunctionPlotDialog.cc  FunctionPlotDialog.h  FunctionPlotWidget.cc  FunctionPlotWidget.h  FunctionWidget.cc  FunctionWidget.h  ImportDialog.cc  ImportDialog.h  ImportWidget.cc  ImportWidget.h  LabelWidget.cc  LabelWidget.h  LegendDialog.cc  LegendDialog.h  LegendWidget.cc  LegendWidget.h  PlotStyleWidget.cc  PlotStyleWidget.h  PlotSurfaceStyleWidget.cc  PlotSurfaceStyleWidget.h  ProjectDialog.cc  ProjectDialog.h  SettingsDialog.cc  SettingsDialog.h  SettingsGeneralPage.cc  SettingsGeneralPage.h  (+6 more)
src/kdefrontend/: AxesDialog.cc  AxesDialog.cpp  AxesDialog.h  AxesWidget.cc  AxesWidget.h  CASSettingsDialog.cpp  CASSettingsDialog.h  ColorMapPreview.cc  ColorMapPreview.h  ColumnDialog.cc  ColumnDialog.cpp  ColumnDialog.h  DataPlotDialog.cc  DataPlotDialog.h  DatasetModel.cpp  DatasetModel.h  ExampleGrid.qml  ExportDialog.cc  ExportDialog.cpp  ExportDialog.h  ExportWidget.cc  ExportWidget.cpp  ExportWidget.h  FunctionPlotDialog.cc  FunctionPlotDialog.cpp  FunctionPlotDialog.h  FunctionPlotWidget.cc  FunctionPlotWidget.h  FunctionWidget.cc  GridDialog.cpp  GridDialog.h  GuiObserver.cpp  GuiObserver.h  GuiTools.cpp  GuiTools.h  HelpList.qml  HistoryDialog.cpp  HistoryDialog.h  ImportDialog.cc  ImportDialog.h  (+76 more)
src/old/: Project.cc  TableModel.h  Worksheet.h  WorksheetView.cpp  column.h
src/parser/: constants.h  functions.h  parser.h  parser.y
src/pics/: CMakeLists.txt
src/pixmaps/: makeh.sh  pixmap.h  project.xpm  worksheet.xpm
src/plots/: Plot.cc  Plot.h  Plot2D.cc  Plot2D.h  Plot2DSimple.cc  Plot2DSimple.cpp  Plot2DSimple.h
src/qtfrontend/: CHANGES  Doxyfile  INSTALL.html  README  appicons.qrc  config.pri  icons.qrc  qtfrontend.dox  scidavis-translations.pro  scidavis.css  scidavis.pro
src/tests/: CMakeLists.txt
src/themes/: BlackOnLightYellow  BlackOnWhite  (+17 more)
tests/: CMakeLists.txt  CommonMetaTest.cpp  CommonMetaTest.h  CommonTest.cpp  CommonTest.h  DependenciesTest.cpp  DependenciesTest.h
(+3199 files in other folders)
